Add UDP options to firewall configurations

--- a/fab_deploy/default-configs/ipf.conf
+++ b/fab_deploy/default-configs/ipf.conf
@@ -40,7 +40,9 @@ pass in quick proto tcp from any to any port = 22 keep state group 200
 ## End Configurable Section ##
 
 #    inbound UDP
-block in quick proto udp all
+block in quick proto udp all head 300
+## Start UDP Configurable Section ##
+## End UDP Configurable Section ##
 
 #        Outbound TCP/UDP
 #        Allow requests to go out and keep the results flowing back in.
